# NLIN-BST

./: CMakeLists.txt  LICENSE  README.md
include/: config.hpp  decomp.hpp  diagnostics.hpp  field.hpp  grid.hpp  initial_data.hpp  nonlinearity.hpp  operators.hpp  quadratures.hpp  solver.hpp  utils.hpp
initial_data/: Makefile  README.md  black_string_id.cpp  read_bsid_example.cpp
src/: config.cpp  decomp.cpp  diagnostics.cpp  field.cpp  grid.cpp  initial_data.cpp  main.cpp  nonlinearity.cpp  solver.cpp  utils.cpp
